[gd_scene format=3 uid="uid://wex81cyrw24j"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/sprouty_dialogs/editor/theme/sprouty_dialogs_theme.tres" id="1_8k3p6"]
[ext_resource type="Texture2D" uid="uid://ca0dqip1tu22y" path="res://addons/sprouty_dialogs/editor/icons/event_nodes/condition.svg" id="3_7frl5"]
[ext_resource type="StyleBox" uid="uid://dfa36wxs72oc0" path="res://addons/sprouty_dialogs/editor/theme/empty_panel.tres" id="4_l3xvy"]
[ext_resource type="Script" uid="uid://d1s7kmoh1qgr0" path="res://addons/sprouty_dialogs/event_nodes/scripts/condition_node.gd" id="5_swe6e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avnbs"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1.66051e-06, 0.543819, 0.103967, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_que3n"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(1.66051e-06, 0.543819, 0.103967, 1)
border_color = Color(0.325, 0.325, 0.325, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="ConditionNode" type="GraphNode"]
offset_right = 429.0
offset_bottom = 195.0
theme = ExtResource("1_8k3p6")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_avnbs")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_que3n")
resizable = true
title = "Condition Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.504465, 0.835459, 0.40337, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.94635, 0.160692, 0.240422, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("5_swe6e")
node_color = Color(1.66051e-06, 0.543819, 0.103967, 1)
node_icon = ExtResource("3_7frl5")

[node name="Container" type="HFlowContainer" parent="."]
layout_mode = 2

[node name="FirstVar" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeField" type="PanelContainer" parent="Container/FirstVar"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("4_l3xvy")

[node name="ValueField" type="PanelContainer" parent="Container/FirstVar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4_l3xvy")

[node name="OperatorDropdown" type="OptionButton" parent="Container"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 6
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = "<"
popup/item_2/id = 2
popup/item_3/text = ">"
popup/item_3/id = 3
popup/item_4/text = "<="
popup/item_4/id = 4
popup/item_5/text = ">="
popup/item_5/id = 5

[node name="SecondVar" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeField" type="PanelContainer" parent="Container/SecondVar"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("4_l3xvy")

[node name="ValueField" type="PanelContainer" parent="Container/SecondVar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4_l3xvy")

[node name="True" type="Label" parent="."]
layout_mode = 2
text = "True"
horizontal_alignment = 2

[node name="False" type="Label" parent="."]
layout_mode = 2
text = "False"
horizontal_alignment = 2
